[project]
name = "moltbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "en-core-web-sm",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "spacy[en-core-web-sm]>=3.8.11",
    "textblob>=0.19.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
